# proc_utils

./: .clang-format  .gitignore  .gitmodules  .luacheckrc  CMakeLists.txt  README.md  proc_utils_ffi.lua  run_tests.ps1
.github/workflows/: ci.yml  release.yml
include/: proc_utils.h
prompt/: ai_correction_guidelines_v3.md
src/: proc_utils_core.cpp  proc_utils_impl.cpp  proc_utils_info.cpp  proc_utils_internal.h
tests/: proc_utils_spec.lua  run_tests.py
